; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_treefuncs.c_do_load_tree2.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_treefuncs.c_do_load_tree2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_9__*, i32 }
%struct.TYPE_9__ = type { i32*, %struct.TYPE_7__, %struct.TYPE_9__* }
%struct.TYPE_7__ = type { i64 }

@.str = private unnamed_addr constant [25 x i8] c"load_tree returned %08x\0A\00", align 1
@STATUS_SUCCESS = common dso_local global i32 0, align 4
@int3 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_8__*, i32*, i32*, %struct.TYPE_9__*, i32*)* @do_load_tree2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_load_tree2(i32* %0, %struct.TYPE_8__* %1, i32* %2, i32* %3, %struct.TYPE_9__* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_8__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_9__*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca %struct.TYPE_9__*, align 8
  store i32* %0, i32** %8, align 8
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store %struct.TYPE_9__* %4, %struct.TYPE_9__** %12, align 8
  store i32* %5, i32** %13, align 8
  %16 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %17 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** %17, align 8
  %19 = icmp ne %struct.TYPE_9__* %18, null
  br i1 %19, label %45, label %20

20:                                               ; preds = %6
  %21 = load i32*, i32** %8, align 8
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %23 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 8
  %25 = load i32*, i32** %10, align 8
  %26 = load i32*, i32** %11, align 8
  %27 = call i32 @load_tree(i32* %21, i32 %24, i32* %25, i32* %26, %struct.TYPE_9__** %15)
  store i32 %27, i32* %14, align 4
  %28 = load i32, i32* %14, align 4
  %29 = call i32 @NT_SUCCESS(i32 %28)
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %35, label %31

31:                                               ; preds = %20
  %32 = load i32, i32* %14, align 4
  %33 = call i32 @ERR(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %32)
  %34 = load i32, i32* %14, align 4
  store i32 %34, i32* %7, align 4
  br label %47

35:                                               ; preds = %20
  %36 = load %struct.TYPE_9__*, %struct.TYPE_9__** %12, align 8
  %37 = load %struct.TYPE_9__*, %struct.TYPE_9__** %15, align 8
  %38 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %37, i32 0, i32 2
  store %struct.TYPE_9__* %36, %struct.TYPE_9__** %38, align 8
  %39 = load i32*, i32** %13, align 8
  %40 = load %struct.TYPE_9__*, %struct.TYPE_9__** %15, align 8
  %41 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %40, i32 0, i32 0
  store i32* %39, i32** %41, align 8
  %42 = load %struct.TYPE_9__*, %struct.TYPE_9__** %15, align 8
  %43 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %44 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %43, i32 0, i32 0
  store %struct.TYPE_9__* %42, %struct.TYPE_9__** %44, align 8
  br label %45

45:                                               ; preds = %35, %6
  %46 = load i32, i32* @STATUS_SUCCESS, align 4
  store i32 %46, i32* %7, align 4
  br label %47

47:                                               ; preds = %45, %31
  %48 = load i32, i32* %7, align 4
  ret i32 %48
}

declare dso_local i32 @load_tree(i32*, i32, i32*, i32*, %struct.TYPE_9__**) #1

declare dso_local i32 @NT_SUCCESS(i32) #1

declare dso_local i32 @ERR(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
